--- a/views/quizzes.ejs
+++ b/views/quizzes.ejs
@@ -7,7 +7,7 @@
     <% var quiz = quizzes[i]; %>
     <tr>
         <td>
-            <p><%= quiz.question %>?:  <%= quiz.answer%></p>
+            <p>Pregunta Numero <%=i%>: <%= quiz.question %>? ==> <%= quiz.answer%></p>
         </td>
     </tr>
     <% } %>
