--- a/views/quizzes.ejs
+++ b/views/quizzes.ejs
@@ -7,7 +7,7 @@
     <% var quiz = quizzes[i]; %>
     <tr>
         <td>
-            <p>Pregunta Numero <%=(+i+1)%>: <%= quiz.question %>? ==> <%= quiz.answer%></p>
+            <p>Pregunta Número <%=(+i+1)%> : <%= quiz.question %>? ==> <%= quiz.answer%></p>
         </td>
     </tr>
     <% } %>
